RESOLVED FIXED205115
[LFC][IFC] Fix fast/text/hyphenate-limit-lines.html
https://bugs.webkit.org/show_bug.cgi?id=205115
Summary [LFC][IFC] Fix fast/text/hyphenate-limit-lines.html
alan
Reported 2019-12-11 08:08:27 PST
handle the hyphenated line count properly
Attachments
Patch (2.22 KB, patch)
2019-12-11 08:16 PST, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-12-11 08:08:50 PST
alan
Comment 2 2019-12-11 08:16:19 PST
Antti Koivisto
Comment 3 2019-12-11 08:23:03 PST
Comment on attachment 385393 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385393&action=review > Source/WebCore/layout/inlineformatting/LineLayoutContext.cpp:246 > + m_successiveHyphenatedLineCount = breakingContext.partialTrailingContent && breakingContext.partialTrailingContent->needsHyphen ? m_successiveHyphenatedLineCount + 1 : 0; Might read better as if()
Antti Koivisto
Comment 4 2019-12-11 08:24:05 PST
if() ++m_successiveHyphenatedLineCount; else m_successiveHyphenatedLineCount = 0;
alan
Comment 5 2019-12-11 08:36:09 PST
alan
Comment 6 2019-12-11 08:45:57 PST
(In reply to Antti Koivisto from comment #3) > Comment on attachment 385393 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=385393&action=review > > > Source/WebCore/layout/inlineformatting/LineLayoutContext.cpp:246 > > + m_successiveHyphenatedLineCount = breakingContext.partialTrailingContent && breakingContext.partialTrailingContent->needsHyphen ? m_successiveHyphenatedLineCount + 1 : 0; > > Might read better as if() good point!
Note You need to log in before you can comment on or make changes to this bug.