[LFC][IFC] Fix fast/text/hyphenate-limit-lines.html https://bugs.webkit.org/show_bug.cgi?id=205115 <rdar://problem/57837829>

Reviewed by Antti Koivisto.

Do not adjust the m_successiveHyphenatedLineCount unless it's the end of the line (either split or push).

* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::LineLayoutContext::processUncommittedContent):

Canonical link: https://commits.webkit.org/218313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253373 268f45cc-cd09-0410-ab3c-d52691b4dbfc